kubernetes/postgres-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: postgres
#   namespace: backstage
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: postgres
#   template:
#     metadata:
#       labels:
#         app: postgres
#     spec:
#       containers:
#         - name: postgres
#           image: postgres:13.2-alpine
#           imagePullPolicy: IfNotPresent
#           ports:
#             - containerPort: 5432
#           envFrom:
#             - secretRef:
#                 name: postgres-secrets
#           volumeMounts:
#             - mountPath: /var/lib/postgresql/data
#               name: postgresdb
#       volumes:
#         - name: postgresdb
#           persistentVolumeClaim:
#             claimName: postgres-storage-claim
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13.2-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgresdb

      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-storage-claim
