kubernetes/backstage-service.yaml
# kubernetes/backstage-service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: backstage
#   namespace: backstage
# spec:
#   selector:
#     app: backstage
#   ports:
#     - name: http
#       port: 80
#       targetPort: http

#production

apiVersion: v1
kind: Service
metadata:
  name: backstage-service
  namespace: backstage
spec:
  type: ClusterIP
  selector:
    app: backstage
  ports:
    # - port: 80
    #   targetPort: 7007
    #   protocol: TCP
    - name : http
      port: 7007
      targetPort: 7007


# apiVersion: v1
# kind: Service
# metadata:
#   name: backstage
#   namespace: backstage
# spec:
#   type: NodePort # Changed from LoadBalancer
#   ports:
#     - port: 80
#       targetPort: 7007
#       protocol: TCP
#       name: http
#   selector:
#     app: backstage
